# sdow

./: pyproject.toml  readme.md
sdow/: sdow.py
tests/: test_sdow.py
