[tool.poetry]
name = "sdow"
version = "0.1.0"
description = ""
authors = ["Jeremy Udit <jcudit@github.com>"]

[tool.poetry.scripts]
sdow = "sdow.sdow:sdow"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.1"
arrow = "^1.2.2"
click = "^8.0.4"
bs4 = "^0.0.1"
numpy = "^1.22.3"
aiohttp = "^3.8.1"
html5lib = "^1.1"
lxml = "^4.8.0"
plotext = "^4.2.0"
cohere = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
